<resources>
    <string name="app_name">RUCafe</string>
    <string name="order_Donuts">Order Donuts</string>
    <string name="order_Coffee">Order Coffee</string>
    <string name="all_Orders">All Orders</string>
    <string name="orders_placed">Orders Placed</string>
    <string name="export_orders">Export Orders</string>
    <string name="back">Back</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="order_coffee">Order Coffee</string>
    <string name="sweet_cream">Sweet Cream</string>
    <string name="mocha">Mocha</string>
    <string name="french_vanilla">French Vanilla</string>
    <string name="caramel">Caramel</string>
    <string name="irish_cream">Irish Cream</string>
    <string name="add_to_order">Add To Order</string>
    <string name="sub_total">Sub-Total</string>
    <string name="current_order">Current Order</string>
    <string name="sales_tax">Sales Tax</string>
    <string name="total_amount">Total Amount</string>
    <string name="hint">hint</string>
    <string name="remove_selected_item">Remove Selected Item</string>
    <string name="place_order">Place Order</string>
    <string name="order_Sandwich">Order Sandwich</string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="rem"><![CDATA[<<]]></string>
    <string name="order_donuts">Order Donuts</string>
    <string name="home_screen">home screen</string>
    <string name="add_to">Add to</string>
    <string name="remove">Remove</string>
    <string name="quantity_of_donuts">Quantity of Donuts</string>
    <string name="Back">back</string>
    <string name="order_sandwich">Order Sandwich</string>
    <string name="bagel">Bagel</string>
    <string name="wheat_bread">Wheat Bread</string>
    <string name="sour_dough">Sour Dough</string>
    <string name="bread">Bread</string>
    <string name="protein">Protein</string>
    <string name="beef">Beef</string>
    <string name="chicken">Chicken</string>
    <string name="fish">Fish</string>
    <string name="addon">AddOn</string>
    <string name="lettuce">Lettuce</string>
    <string name="tomato">Tomato</string>
    <string name="cheese">Cheese</string>
    <string name="onion">Onion</string>
    <string name="addtoOrder">Add To Order</string>
    <string name="sub_Total">Sub-Total</string>
    <string name="Total">total</string>
</resources>